--- a/css/admin.css
+++ b/css/admin.css
@@ -1,5 +1,5 @@
 /* ------------------------------ */
-/* By Rik Janssen / Betacore.tech */
+/* By FK / FK Projeto */
 /* ------------------------------ */
 
 /* the form styles */
